ensure popup text col ok in dark mode

--- a/src/custom.css
+++ b/src/custom.css
@@ -37,6 +37,7 @@ li {
 
 .modal {
   font-size: 12px;
+  color: #333;
 }
 .modal > .header {
   width: 100%;
